Added dox mainpage

--- a/README.dox
+++ b/README.dox
@@ -1,5 +1,5 @@
 /**
- * @mainpage Stand Alone Braille Tutor
+ * @mainpage SABT Software
  * @author Nick LaGrow (nlagrow)
  * @author Alex Etling (petling)
  * @author Kory Stiger (kstiger)
